# HapCHAT

./: Dockerfile  HapCHAT.py  README.md  quick.sh  setup.sh
Docker/: Dockerfile
data/: file.bam.bai
doc/: index.md
docker/: Dockerfile  gosu.sh
docs/: CNAME  index.md
example/: MD5SUM  Snakefile
experiments/: README.md  Snakefile
experiments/data/: README.md  Snakefile
experiments/data/reference/: MD5SUM
experiments/data/restricted-software/: MD5SUM
experiments/data/scripts/: genomesimulator.py  vcf_merge_trio.pl
experiments/scripts/: increments.py  run.hapcol.bash
scripts/: extractsample.bash  pseudorandomshuffle.bash  subvcf.py  wiftools.py
src/: CMakeLists.txt  HapCHATcore.cpp  hapchat_core.cpp  readset.h
test/: test.hap  test.time  test.wif
